--- a/data/Game_crawl_requirements.ipynb
+++ b/data/Game_crawl_requirements.ipynb
@@ -72,9 +72,9 @@
     "chrome_options.add_argument(f'user-agent={user_agent}')\n",
     "# 불필요한 에러 메세지 없애기\n",
     "chrome_options.add_experimental_option(\"excludeSwitches\", [\"enable-logging\"])\n",
-    "# driver = webdriver.Chrome('./chromedriver/chromedriver.exe', options=chrome_options)\n",
-    "service = Service(executable_path=ChromeDriverManager().install())\n",
-    "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
+    "driver = webdriver.Chrome(ChromeDriverManager().install(), options=chrome_options)\n",
+    "# service = Service(executable_path=ChromeDriverManager().install())\n",
+    "# driver = webdriver.Chrome(service=service, options=chrome_options)\n",
     "\n",
     "save_file = True  # 파일 저장 여부\n",
     "waiting_sec = 2.5"
@@ -148,9 +148,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ntime = 0\n",
-    "total = len(links)\n",
-    "start = time.time()"
+    "load_pro = pd.read_csv('gameprograms230920.csv')\n",
+    "load_req = pd.read_csv('gamerequirements230920.csv')\n",
+    "ntime = len(load_pro)\n",
+    "total = len(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "86b9310c-27d8-49b7-b054-08c48bfc000f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for col in header_pro:\n",
+    "    program[col] = load_pro[col].to_list()\n",
+    "for col in header_req:\n",
+    "    requirement[col] = load_req[col].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e8cd14c3-405b-4b91-b375-d41c2e4961ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 크롤링 시작\n",
+    "key_not_in = []\n",
+    "url = f'https://gamesystemrequirements.com/'\n",
+    "driver.get(url)\n",
+    "driver.implicitly_wait(10)\n",
+    "driver.find_element(By.XPATH, '//*[@id=\"qc-cmp2-ui\"]/div[2]/div/button[2]').click()\n",
+    "driver.implicitly_wait(10)"
    ]
   },
   {
@@ -163,19 +195,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7/7713 (0.09%) (남은 시간: 29012s) / 예상 종료 시간: 20, 07:49:49)"
+      "4800/7713 (62.23%) (남은 시간: 00243s) / 예상 종료 시간: 20, 17:51:44)"
      ]
     }
    ],
    "source": [
-    "# 크롤링 시작\n",
-    "key_not_in = []\n",
-    "url = f'https://gamesystemrequirements.com/'\n",
-    "driver.get(url)\n",
-    "driver.implicitly_wait(10)\n",
-    "driver.find_element(By.XPATH, '//*[@id=\"qc-cmp2-ui\"]/div[2]/div/button[2]').click()\n",
-    "driver.implicitly_wait(10)\n",
     "time.sleep(waiting_sec)\n",
+    "start = time.time()\n",
+    "nstart = ntime\n",
     "for link in links.link[ntime:]:\n",
     "    driver.get(link)\n",
     "    driver.implicitly_wait(10)\n",
@@ -185,6 +212,10 @@
     "    title = soup.select_one('body > div.main-container > div.headline > div > div.game_head > div.game_head_title').get_text()\n",
     "    img = soup.select_one('body > div.main-container > div.headline > div > div.game_head > div.game_head_cover > img')\n",
     "    \n",
+    "\n",
+    "    if len(program['name']) >= ntime:\n",
+    "        for key in program.keys(): program[key] = program[key][:ntime]\n",
+    "        \n",
     "    program['name'].append(title)\n",
     "    program['usage'].append(None)\n",
     "    program['image'].append(img['src'] if img is not None else None)\n",
@@ -211,8 +242,13 @@
     "        requirement['sto'].append(info.get('STO:'))\n",
     "    \n",
     "    ntime += 1\n",
-    "    rest_time = (time.time() - start) / ntime * (total - ntime)\n",
+    "    if ntime % 10 == 0 and save_file:\n",
+    "        today = time.strftime('%y%m%d')\n",
+    "        pd.DataFrame(requirement).to_csv(f'gamerequirements{today}.csv', index=None)\n",
+    "        pd.DataFrame(program).to_csv(f'gameprograms{today}.csv', index=None)\n",
+    "    rest_time = (time.time() - start) / nstart * (total - nstart)\n",
     "    print(f'\\r{ntime}/{total} ({ntime/total*100:.2f}%) (남은 시간: {rest_time:05.0f}s) / 예상 종료 시간: {time.strftime(\"%d, %H:%M:%S\", time.localtime(time.time() + rest_time))})', end='')\n",
+    "    driver.implicitly_wait(10)\n",
     "    \n",
     "end = time.time()\n",
     "print(f'\\n걸린 시간: {end-start:.2f} sec')\n",
@@ -249,26 +285,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7338311d-bc00-4b66-aee2-eb2fee7ea727",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fa96f00-83b4-4c42-bc0e-85d28d58c9f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup.select_one('body > div.main-container > div.headline > div > div.game_head > div.game_head_cover > img')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "da338755-ac8b-49ec-940f-5b6731c9301a",
    "metadata": {},
    "outputs": [],
@@ -291,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
