--- a/data/crawling/Danawa_crawl_cooler.ipynb
+++ b/data/crawling/Danawa_crawl_cooler.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "55688ee4",
    "metadata": {
     "tags": []
    },
@@ -32,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "98142a0c",
    "metadata": {
     "tags": []
    },
@@ -58,7 +56,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d05cb690",
    "metadata": {
     "tags": []
    },
@@ -83,7 +80,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ad3e5834",
    "metadata": {
     "tags": []
    },
@@ -121,7 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cfb80434",
    "metadata": {
     "tags": []
    },
@@ -137,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b2a47b72",
    "metadata": {
     "tags": []
    },
@@ -159,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "25848609",
    "metadata": {
     "tags": []
    },
@@ -174,7 +167,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6ef30643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +178,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bc31de55",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "426c9f09",
    "metadata": {
     "tags": []
    },
@@ -319,7 +309,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaab4e39-4654-410f-b3d7-e2e0107e1208",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -327,7 +316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
