--- a/data/crawling/Game_modify_requirements.ipynb
+++ b/data/crawling/Game_modify_requirements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[12095 rows x 8 columns]"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,18 +330,19 @@
        "Name: sto, Length: 12095, dtype: object"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## 용량 시작.........................\n",
     "gr_origin['sto'].str.contains('4,500')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +351,7 @@
        "Series([], Name: sto, dtype: object)"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gr_origin.sto = sto_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -439,18 +449,19 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## 램 시작............\n",
     "gr_origin.ram.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +480,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 727,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66    1,5 Go for windows XP / 2 Go for Vista, Seven ...\n",
+       "67    2 Go for 32 bit windows (XP/Vista/7/8) / 3 Go ...\n",
+       "Name: ram, dtype: object"
+      ]
+     },
+     "execution_count": 727,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = gr_origin.loc[gr_origin.ram.str.contains('windows', na=False), 'ram']\n",
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 728,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1,5 Go for windows XP / 2 Go for Vista, Seven or 8 GB RAM '"
+      ]
+     },
+     "execution_count": 728,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gr_origin.loc[66, 'ram']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 725,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr_origin.loc[idx, 'ram'] = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 729,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name                                           Aarklash: Legacy\n",
+       "cpu           AMD/intel dual-core running at 1,8 GHz (AMD At...\n",
+       "ram           1,5 Go for windows XP / 2 Go for Vista, Seven ...\n",
+       "gpu           Integrated or mobile graphic card, with at lea...\n",
+       "dx                                                 Version 9.0c\n",
+       "os                     Windows 7 / Vista / XP PC (32 ou 64 bit)\n",
+       "sto                                                           4\n",
+       "spec_class                                                    0\n",
+       "Name: 66, dtype: object"
+      ]
+     },
+     "execution_count": 729,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gr_origin.loc[66]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 674,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 475,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(gr_origin).to_csv(f'../gamerequirements_tmp{today}.csv', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +626,7 @@
        "'512+MB of RAM'"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,12 +641,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(gr_origin).to_csv(f'../gamerequirements{today}.csv', index=None)"
+    "pd.DataFrame(gr_origin).to_csv(f'../gamerequirements_{today}.csv', index=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +719,7 @@
       "512 MB RAM::0.5\n",
       "1GB::1\n",
       "4 GB RAM::4\n",
-      "1,5 Go for windows XP / 2 Go for Vista, Seven or 8 GB RAM ::15\n",
+      "1,5 Go for windows XP / 2 Go for Vista, Seven or 8 GB RAM ::1.5\n",
       "2 Go for 32 bit windows (XP/Vista/7/8) / 3 Go for 64 bit windows (XP/Vista/7/8) GB RAM::2\n",
       "4 GB RAM::4\n",
       "4 GB RAM::4\n",
@@ -927,8 +1036,8 @@
       "16 GB RAM::16\n",
       "4 GB RAM::4\n",
       "8 GB RAM::8\n",
-      "1,0 GB::10\n",
-      "2,0 GB::20\n",
+      "1,0 GB::1.0\n",
+      "2,0 GB::2.0\n",
       "512 MB RAM::0.5\n",
       "4 GB RAM::4\n",
       "2 GB RAM::2\n",
@@ -1459,7 +1568,7 @@
       "8192 MB RAM::8.0\n",
       "8 GB RAM::8\n",
       "16 GB RAM::16\n",
-      "1::5121\n",
+      "1::1\n",
       "1 GB (XP)\n",
       "2 GB  (Vista)::12\n",
       "512 MB RAM::0.5\n",
@@ -1504,7 +1613,7 @@
       "4096 MB RAM::4.0\n",
       "2 GB RAM::2\n",
       "4 GB RAM::4\n",
-      "512+MB of RAM::512\n",
+      "512+MB of RAM::0.5\n",
       "4 GB RAM::4\n",
       "8 GB RAM::8\n",
       "2 GB RAM::2\n",
@@ -3376,9 +3485,9 @@
       "8 GB RAM::8\n",
       "1 GB (XP)\n",
       "1,5 GB (Vista) 32 bit\n",
-      "2 GB (Vista) 64 bit::1152\n",
+      "2 GB (Vista) 64 bit::11.52\n",
       "2 GB (XP)\n",
-      "2,5 GB (Vista)::225\n",
+      "2,5 GB (Vista)::22.5\n",
       "6 GB RAM::6\n",
       "8 GB RAM::8\n",
       "8 GB RAM::8\n",
@@ -5775,7 +5884,7 @@
       "8 GB RAM::8\n",
       "16 GB RAM::16\n",
       "1GB::1\n",
-      "1,5GB::15\n",
+      "1,5GB::1.5\n",
       "2 GB RAM::2\n",
       "1 GB RAM::1\n",
       "4 GB RAM::4\n",
@@ -8667,7 +8776,7 @@
       "2 GB RAM::2\n",
       "2 GB\t\t\t\t\t\t\t\t::2\n",
       "512 Mb ::512\n",
-      "2,0 GB::20\n",
+      "2,0 GB::2.0\n",
       "4 GB RAM::4\n",
       "8 GB RAM::8\n",
       "8 GB RAM::8\n",
@@ -8892,7 +9001,7 @@
       "512 MB RAM ::0.5\n",
       "2 GB RAM ::2\n",
       "512 MB Ram::0.5\n",
-      "1,5 GB Ram::15\n",
+      "1,5 GB Ram::1.5\n",
       "512 MB RAM::0.5\n",
       "1.5 GB RAM::1.5\n",
       "96 MB RAM\n",
@@ -9967,7 +10076,7 @@
       "3 GB RAM::3\n",
       "4 GB RAM::4\n",
       "512 MB RAM::0.5\n",
-      "1,5 GB RAM ::15\n",
+      "1,5 GB RAM ::1.5\n",
       "1 GB RAM::1\n",
       "4 GB RAM::4\n",
       "4 GB RAM::4\n",
@@ -10743,7 +10852,7 @@
       "4 GB RAM::4\n",
       "6 GB RAM::6\n",
       "1 Gbyte::1\n",
-      "1,5 Gbyte::15\n",
+      "1,5 Gbyte::1.5\n",
       "1 GB RAM::1\n",
       "2 GB RAM::2\n",
       "1 GB RAM::1\n",
@@ -11008,7 +11117,7 @@
       "8 GB RAM::8\n",
       "32MB RAM::0.03125\n",
       "XP: 1 GB RAM\n",
-      "7, Vista: 1.5 GB RAM::17\n",
+      "7, Vista: 1.5 GB RAM::17.\n",
       "6 GB RAM::6\n",
       "4 GB RAM::4\n",
       "8 GB RAM::8\n",
