--- a/data/crawling/Benchmark_insert_gpu.ipynb
+++ b/data/crawling/Benchmark_insert_gpu.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b809b471",
    "metadata": {
     "tags": []
    },
@@ -16,6 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d11856ba",
    "metadata": {
     "tags": []
    },
@@ -28,6 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "2055d8bb",
    "metadata": {
     "tags": []
    },
@@ -147,6 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "c2c86fe4",
    "metadata": {
     "tags": []
    },
@@ -170,6 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "6f030f6b",
    "metadata": {
     "tags": []
    },
@@ -196,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "bd9a39be",
    "metadata": {
     "tags": []
    },
@@ -218,6 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "0e53adcb",
    "metadata": {
     "tags": []
    },
@@ -233,6 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "520cf5df",
    "metadata": {
     "tags": []
    },
@@ -248,6 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "0d5d81f2",
    "metadata": {
     "tags": []
    },
@@ -264,6 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "c9bb6090",
    "metadata": {
     "tags": []
    },
@@ -276,6 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "65044629",
    "metadata": {
     "tags": []
    },
@@ -288,6 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "8797ef7d",
    "metadata": {
     "tags": []
    },
@@ -321,6 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "3f11d46d",
    "metadata": {
     "tags": []
    },
@@ -354,6 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "d782763d",
    "metadata": {
     "tags": []
    },
@@ -365,6 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "8410b706",
    "metadata": {
     "tags": []
    },
@@ -403,6 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "c7b67c33",
    "metadata": {
     "tags": []
    },
@@ -1768,6 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "dfb2eda4",
    "metadata": {
     "tags": []
    },
@@ -1790,6 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "20bd7fd1",
    "metadata": {
     "tags": []
    },
@@ -2202,6 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e9dade39",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2209,7 +2228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2223,7 +2242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
