--- a/data/crawling/Danawa_crawl_cooler.ipynb
+++ b/data/crawling/Danawa_crawl_cooler.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "2ff9b0d5",
    "metadata": {
     "tags": []
    },
@@ -31,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "2b37dce6",
    "metadata": {
     "tags": []
    },
@@ -56,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ee79f0c7",
    "metadata": {
     "tags": []
    },
@@ -80,6 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "9565988d",
    "metadata": {
     "tags": []
    },
@@ -117,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "ba9530c1",
    "metadata": {
     "tags": []
    },
@@ -132,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "348e881f",
    "metadata": {
     "tags": []
    },
@@ -153,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e84e5de4",
    "metadata": {
     "tags": []
    },
@@ -167,6 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "5fde8952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,6 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "9a55cdab",
    "metadata": {},
    "outputs": [
     {
@@ -295,6 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "8bf965b9",
    "metadata": {
     "tags": []
    },
@@ -309,6 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4eac05cc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -316,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
